--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     <script src="./Demo Select Areas_files/jquery-1.11.3.min.js" type="text/javascript"></script>
     <script src="./Demo Select Areas_files/jquery.selectareas.js" type="text/javascript"></script>
     <script type="text/javascript">
+        var originalX = 285;
+        var originalY = 318;
+        var originalWidth = 465;
+        var originalHeight = 531;
+
         $(document).ready(function () {
+
             $('img#example').attr('src', './Demo Select Areas_files/balta_vyrnew_U98OChp%20(3).png');
             $('img#example').selectAreas({
                 minSize: [10, 10],
@@ -19,10 +25,10 @@
                 width: 400,
                 areas: [
                     {
-                        x: 205,
-                        y: 218,
-                        width: 140,
-                        height: 200,
+                        x: originalX,
+                        y: originalY,
+                        width: originalWidth,
+                        height: originalHeight,
                     }
                 ]
             });
